--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+toddleglow (0.5.7) unstable; urgency=low
+
+  Fix hardcoded timezone bits in TimeInterval class
+    - Authored by: Dan Farnsworth <absltkaos@gmail.com>
+
+ -- Dan Farnsworth <absltkaos@gmail.com>  Thu, 2 May 2019 10:31:50 -0600 
+
 toddleglow (0.5.6) unstable; urgency=low
 
   Fixed issue when using piglow, where the daemon user can't access
